Cleanup gradle files and scripts & apply review comments